--- a/databases-project.cabal
+++ b/databases-project.cabal
@@ -21,7 +21,7 @@ executable databases-project
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13
-  build-depends:       postgresql-simple >= 0.6.2
+  build-depends:       postgresql-simple
   build-depends:       aeson
   hs-source-dirs:      src
   default-language:    Haskell2010
