--- a/databases-project.cabal
+++ b/databases-project.cabal
@@ -18,10 +18,10 @@ cabal-version:       >=1.10
 
 executable databases-project
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Parser
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13
-  build-depends:       postgresql-simple
-  build-depends:       aeson
+  build-depends:       base >=4.12 && <4.13,
+                       postgresql-simple,
+                       aeson
   hs-source-dirs:      src
   default-language:    Haskell2010
