--- a/databases-project.cabal
+++ b/databases-project.cabal
@@ -23,6 +23,7 @@ executable databases-project
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
                        postgresql-simple,
-                       aeson
+                       aeson,
+                       text
   hs-source-dirs:      src
   default-language:    Haskell2010
