--- a/databases-project.cabal
+++ b/databases-project.cabal
@@ -24,6 +24,7 @@ executable databases-project
   build-depends:       base >=4.12 && <4.13,
                        postgresql-simple,
                        aeson,
-                       text
+                       text,
+                       bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
