--- a/databases-project.cabal
+++ b/databases-project.cabal
@@ -21,7 +21,7 @@ executable databases-project
   other-modules:       Parser,
                        Functions
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13,
+  build-depends:       base,
                        postgresql-simple,
                        aeson,
                        text,
